# sketechlinalg

./: pyproject.toml
sketchlinalg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sketchlinalg/sketches/: gaussian_count.py
tests/: test_sketches.py
